apps/seanmizen.com/src/components/accordion/accordion.module.css
.accordion {
  position: relative;
}

.trigger {
  background: none;
  border: none;
  color: inherit;
  font: inherit;
  padding: 0;
  cursor: pointer;
  text-align: left;
  width: 100%;
}

.trigger:hover {
  cursor: default;
  text-decoration: underline;
  text-underline-offset: 2px;
}

.trigger:active {
  opacity: 0.7;
}

.content {
  overflow: hidden;
  transition: max-height 100ms ease-in-out;
}
@media screen and (min-width: 500px) {
  .content {
    min-width: 400px;
  }
}

.content.closed {
  max-height: 0;
}

.content.open {
  max-height: 5000px;
}

.inner {
  padding-top: 0.5rem;
  padding-bottom: 0.2rem;
}

